Wed Sep 19 12:24:09 2001  Christopher Faylor <cgf@cygnus.com>

	* lib/getopt.c (__progname): Don't declare if not compiling for cygwin.

Wed Sep 19 18:07:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* lib/getopt.c (getopt_long): Avoid compiler warning.

Wed Sep 19 11:52:42 2001  Christopher Faylor <cgf@cygnus.com>

	* lib/getopt.c: Use __progname==__argv[0] when not compiling for cygwin.

	* scandir.cc (scandir): Use correct default when compar == NULL.

Wed Sep 19 17:49:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::fhandler_socket): Revert
	memory allocation to use cmalloc again.

Tue Sep 18 21:04:26 2001  Christopher Faylor <cgf@cygnus.com>

	* cygwin.din (__argv): Export.
	(__argc): Ditto.
	(__progname): Ditto.
	* include/getopt.h (getopt_long): constify arguments.
	* lib/getopt.c: Import new file from NetBSD.

Tue Sep 18 18:21:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (mmap): Don't reuse anonymous memory in MAP_FIXED case.

Mon Sep 17 17:29:25 2001  Christopher Faylor <cgf@cygnus.com>

	* include/io.h: Add access declaration.

Mon Sep 17 14:04:27 2001  Christopher Faylor <cgf@cygnus.com>

	* syscalls.cc (rmdir): Set cwd to some other location if attempting to
	rmdir current working directory.

Sun Sep 16 23:04:31 2001  Christopher Faylor <cgf@cygnus.com>

	* dtable.h (not_open): Assure inline.
	* fhandler.h (operator []): Make const.

Sun Sep 16 23:02:57 2001  Robert Collins <rbtcollins@hotmail.com>

	* sync.cc (muto::~muto): Fix typo which stopped muto event handle from
	ever being closed.

2001-09-16  Egor Duda  <deo@logos-m.ru>

	* path.cc (symlink): Check arguments for validity.
	(getcwd): Ditto.
	* syscalls.cc (ftruncate): Ditto.
	* times.cc (times): Ditto.
	* uname.cc (uname): Ditto.

Sat Sep 15 22:54:49 2001  Christopher Faylor <cgf@cygnus.com>

	* net.cc (dup_servent_ptr): Detect old Windows 95 misaligned structure
	and realign appropriately.
