@@ -29,6 +29,7 @@ static NO_COPY wincaps wincap_unknown = {
   has_eventlog:false,
   has_ip_helper_lib:false,
   has_set_handle_information:false,
+  has_set_handle_information_on_console_handles:false,
   supports_smp:false,
   map_view_of_file_ex_sucks:false,
   altgr_is_ctrl_alt:false,
@@ -62,6 +63,7 @@ static NO_COPY wincaps wincap_95 = {
   has_eventlog:false,
   has_ip_helper_lib:false,
   has_set_handle_information:false,
+  has_set_handle_information_on_console_handles:false,
   supports_smp:false,
   map_view_of_file_ex_sucks:true,
   altgr_is_ctrl_alt:false,
@@ -95,6 +97,7 @@ static NO_COPY wincaps wincap_95osr2 = {
   has_eventlog:false,
   has_ip_helper_lib:false,
   has_set_handle_information:false,
+  has_set_handle_information_on_console_handles:false,
   supports_smp:false,
   map_view_of_file_ex_sucks:true,
   altgr_is_ctrl_alt:false,
@@ -128,6 +131,7 @@ static NO_COPY wincaps wincap_98 = {
   has_eventlog:false,
   has_ip_helper_lib:true,
   has_set_handle_information:false,
+  has_set_handle_information_on_console_handles:false,
   supports_smp:false,
   map_view_of_file_ex_sucks:true,
   altgr_is_ctrl_alt:false,
@@ -161,6 +165,7 @@ static NO_COPY wincaps wincap_98se = {
   has_eventlog:false,
   has_ip_helper_lib:true,
   has_set_handle_information:false,
+  has_set_handle_information_on_console_handles:false,
   supports_smp:false,
   map_view_of_file_ex_sucks:true,
   altgr_is_ctrl_alt:false,
@@ -194,6 +199,7 @@ static NO_COPY wincaps wincap_me = {
   has_eventlog:false,
   has_ip_helper_lib:true,
   has_set_handle_information:false,
+  has_set_handle_information_on_console_handles:false,
   supports_smp:false,
   map_view_of_file_ex_sucks:true,
   altgr_is_ctrl_alt:false,
@@ -227,6 +233,7 @@ static NO_COPY wincaps wincap_nt3 = {
   has_eventlog:true,
   has_ip_helper_lib:false,
   has_set_handle_information:true,
+  has_set_handle_information_on_console_handles:false,
   supports_smp:false,
   map_view_of_file_ex_sucks:false,
   altgr_is_ctrl_alt:true,
@@ -260,6 +267,7 @@ static NO_COPY wincaps wincap_nt4 = {
   has_eventlog:true,
   has_ip_helper_lib:false,
   has_set_handle_information:true,
+  has_set_handle_information_on_console_handles:false,
   supports_smp:true,
   map_view_of_file_ex_sucks:false,
   altgr_is_ctrl_alt:true,
@@ -293,6 +301,7 @@ static NO_COPY wincaps wincap_nt4sp4 = {
   has_eventlog:true,
   has_ip_helper_lib:true,
   has_set_handle_information:true,
+  has_set_handle_information_on_console_handles:false,
   supports_smp:true,
   map_view_of_file_ex_sucks:false,
   altgr_is_ctrl_alt:true,
@@ -326,6 +335,7 @@ static NO_COPY wincaps wincap_2000 = {
   has_eventlog:true,
   has_ip_helper_lib:true,
   has_set_handle_information:true,
+  has_set_handle_information_on_console_handles:true,
   supports_smp:true,
   map_view_of_file_ex_sucks:false,
   altgr_is_ctrl_alt:true,
@@ -359,6 +369,7 @@ static NO_COPY wincaps wincap_xp = {
   has_eventlog:true,
   has_ip_helper_lib:true,
   has_set_handle_information:true,
+  has_set_handle_information_on_console_handles:true,
   supports_smp:true,
   map_view_of_file_ex_sucks:false,
   altgr_is_ctrl_alt:true,
