@@ -30,6 +30,7 @@ struct wincaps
   unsigned has_eventlog                                 : 1;
   unsigned has_ip_helper_lib                            : 1;
   unsigned has_set_handle_information                   : 1;
+  unsigned has_set_handle_information_on_console_handles: 1;
   unsigned supports_smp                                 : 1;
   unsigned map_view_of_file_ex_sucks                    : 1;
   unsigned altgr_is_ctrl_alt                            : 1;
@@ -77,6 +78,7 @@ public:
   bool  IMPLEMENT (has_eventlog)
   bool  IMPLEMENT (has_ip_helper_lib)
   bool  IMPLEMENT (has_set_handle_information)
+  bool  IMPLEMENT (has_set_handle_information_on_console_handles)
   bool  IMPLEMENT (supports_smp)
   bool  IMPLEMENT (map_view_of_file_ex_sucks)
   bool  IMPLEMENT (altgr_is_ctrl_alt)
